# CMake-Ep022

./: CMakeLists.txt  README.adoc
calculator/: CMakeLists.txt
calculator/src/: calculator.cpp
cmake/: AddGoogleTest.cmake
test/: CMakeLists.txt  test_calc.cpp
